--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupCreate.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupCreate.json
@@ -14,6 +14,21 @@
             "name": "ThrottlingPolicy",
             "metricId": "IncomingMessages",
             "rateLimitThreshold": 15
+          },
+          {
+            "name": "ThrottlingPolicy",
+            "metricId": "OutgoingMessages",
+            "rateLimitThreshold": 20
+          },
+          {
+            "name": "ThrottlingPolicy",
+            "metricId": "IncomingBytes",
+            "rateLimitThreshold": 3951729
+          },
+          {
+            "name": "ThrottlingPolicy",
+            "metricId": "OutgoingBytes",
+            "rateLimitThreshold": 245175
           }
         ],
         "isEnabled": true
@@ -37,6 +52,21 @@
               "name": "ThrottlingPolicy",
               "metricId": "IncomingMessages",
               "rateLimitThreshold": 15
+            },
+            {
+              "name": "ThrottlingPolicy",
+              "metricId": "OutgoingMessages",
+              "rateLimitThreshold": 20
+            },
+            {
+              "name": "ThrottlingPolicy",
+              "metricId": "IncomingBytes",
+              "rateLimitThreshold": 3951729
+            },
+            {
+              "name": "ThrottlingPolicy",
+              "metricId": "OutgoingBytes",
+              "rateLimitThreshold": 245175
             }
           ],
           "isEnabled": true
