--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupGet.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupGet.json
@@ -23,6 +23,21 @@
               "name": "ThrottlingPolicy",
               "metricId": "IncomingMessages",
               "rateLimitThreshold": 15
+            },
+            {
+              "name": "ThrottlingPolicy",
+              "metricId": "OutgoingMessages",
+              "rateLimitThreshold": 20
+            },
+            {
+              "name": "ThrottlingPolicy",
+              "metricId": "IncomingBytes",
+              "rateLimitThreshold": 3951729
+            },
+            {
+              "name": "ThrottlingPolicy",
+              "metricId": "OutgoingBytes",
+              "rateLimitThreshold": 245175
             }
           ],
           "isEnabled": true
