--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupListByNamespace.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupListByNamespace.json
@@ -24,6 +24,21 @@
                   "name": "ThrottlingPolicy",
                   "metricId": "IncomingMessages",
                   "rateLimitThreshold": 15
+                },
+                {
+                  "name": "ThrottlingPolicy",
+                  "metricId": "OutgoingMessages",
+                  "rateLimitThreshold": 20
+                },
+                {
+                  "name": "ThrottlingPolicy",
+                  "metricId": "IncomingBytes",
+                  "rateLimitThreshold": 3951729
+                },
+                {
+                  "name": "ThrottlingPolicy",
+                  "metricId": "OutgoingBytes",
+                  "rateLimitThreshold": 245175
                 }
               ],
               "isEnabled": true
@@ -37,13 +52,28 @@
             "properties": {
               "updatedAt": "2022-01-13T04:08:11.1671879Z",
               "created": "2022-01-13T04:08:11.1671879Z",
-              "appGroupIdentifier": "SASKey=RootManageSharedKey",
+              "appGroupIdentifier": "AADAppID=Guid2",
               "name": "appGroup2",
               "policies": [
                 {
                   "name": "ThrottlingPolicy",
+                  "metricId": "IncomingMessages",
+                  "rateLimitThreshold": 15
+                },
+                {
+                  "name": "ThrottlingPolicy",
                   "metricId": "OutgoingMessages",
                   "rateLimitThreshold": 20
+                },
+                {
+                  "name": "ThrottlingPolicy",
+                  "metricId": "IncomingBytes",
+                  "rateLimitThreshold": 3951729
+                },
+                {
+                  "name": "ThrottlingPolicy",
+                  "metricId": "OutgoingBytes",
+                  "rateLimitThreshold": 245175
                 }
               ],
               "isEnabled": false
