Validations fix continued

--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/ApplicationGroups.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/ApplicationGroups.json
@@ -207,7 +207,7 @@
           "200": {
             "description": "Namespace ApplicationGroup returned successfully.",
             "schema": {
-              "$ref": "#/definitions/AuthorizationRule"
+              "$ref": "#/definitions/ApplicationGroup"
             }
           },
           "default": {
@@ -258,7 +258,7 @@
             },
             "isEnabled": {
               "type": "boolean",
-              "description": "Determines if the status of connection from client to namespace under this appgroup is enabled or disabled."
+              "description": "Determines if the status of connection from client to namespace under this Application Group is enabled or disabled."
             },
             "appGroupIdentifier": {
               "readOnly": true,
@@ -306,7 +306,7 @@
         "rateLimitThreshold": {
           "readOnly": true,
           "type": "int32",
-          "description": "The Threshold limit above which the application group will be throttled.Rame limit is always per second."
+          "description": "The Threshold limit above which the application group will be throttled.Rate limit is always per second."
         },
         "metricId": {
           "type": "string",
