--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/ApplicationGroups.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/ApplicationGroups.json
@@ -85,6 +85,7 @@
           "ApplicationGroup"
         ],
         "operationId": "Namespaces_CreateOrUpdateApplicationGroup",
+        "x-ms-azure-resource": true,
         "x-ms-examples": {
           "ApplicationGroupCreate": {
             "$ref": "./examples/ApplicationGroup/ApplicationGroupCreate.json"
@@ -222,6 +223,7 @@
   },
   "definitions": {
     "ApplicationGroupListResult": {
+      "type": "object",
       "properties": {
         "value": {
           "type": "array",
