--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupListByNamespace.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupListByNamespace.json
@@ -10,9 +10,13 @@
       "body": {
         "value": [
           {
+            "id": "/subscriptions/e8baea74-64ce-459b-bee3-5aa4c47b3ae3/resourceGroups/sayantest/providers/Microsoft.EventHub/namespaces/sayan-ua-test-eh-system-1/applicationgroups/appGroup1",
+            "name": "appGroup1",
+            "type": "Microsoft.EventHub/Namespaces/ApplicationGroups",
+            "location": "EAST US 2 EUAP",
             "properties": {
               "updatedAt": "2022-01-13T03:08:11.1671879Z",
-              "created": "2021-01-13T03:08:11.1671879Z",
+              "createdAt": "2021-01-13T03:08:11.1671879Z",
               "appGroupIdentifier": "SASKey=RootManageSharedKey",
               "name": "appGroup1",
               "policies": [
@@ -47,7 +51,7 @@
             "location": "EAST US 2 EUAP",
             "properties": {
               "updatedAt": "2022-01-13T04:08:11.1671879Z",
-              "created": "2022-01-13T04:08:11.1671879Z",
+              "createdAt": "2022-01-13T04:08:11.1671879Z",
               "appGroupIdentifier": "AADAppID=Guid2",
               "name": "appGroup2",
               "policies": [
