--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/ApplicationGroups.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/ApplicationGroups.json
@@ -279,21 +279,20 @@
               },
               "description": "List of group policies that define the behavior of application group. The policies can support resource governance scenarios such as limiting ingress or egress traffic."
             }
-          },
-          "allOf": [
-            {
-              "$ref": "../../../common/v2/definitions.json#/definitions/ProxyResource"
-            }
-          ],
-          "description": ""
+          }
         },
         "systemData": {
           "readOnly": true,
           "description": "The system meta data relating to this resource.",
           "$ref": "../../../common/v1/definitions.json#/definitions/systemData"
-        }
+        },
       },
-      "description": "Single item in List or Get Schema Group operation"
+      "allOf": [
+        {
+          "$ref": "../../../common/v2/definitions.json#/definitions/ProxyResource"
+        }
+      ],
+      "description": "The Application Group object"
     },
     "ThrottlingPolicy": {
       "type": "object",
