--- a/specification/authorization/resource-manager/Microsoft.Authorization/preview/2020-10-01-preview/RoleAssignmentScheduleRequest.json
+++ b/specification/authorization/resource-manager/Microsoft.Authorization/preview/2020-10-01-preview/RoleAssignmentScheduleRequest.json
@@ -393,6 +393,10 @@
           "type": "object",
           "description": "Schedule info of the role assignment schedule"
         },
+        "validateOnly": {
+          "type": "bool",
+          "description": "To specify if this request is only to validate the RoleAssignmentScheduleRequest"
+        },
         "linkedRoleEligibilityScheduleId": {
           "type": "string",
           "description": "The linked role eligibility schedule id - to activate an eligibility."
