--- a/specification/authorization/resource-manager/Microsoft.Authorization/preview/2020-10-01-preview/RoleAssignmentScheduleRequest.json
+++ b/specification/authorization/resource-manager/Microsoft.Authorization/preview/2020-10-01-preview/RoleAssignmentScheduleRequest.json
@@ -394,7 +394,7 @@
           "description": "Schedule info of the role assignment schedule"
         },
         "validateOnly": {
-          "type": "bool",
+          "type": "string",
           "description": "To specify if this request is only to validate the RoleAssignmentScheduleRequest"
         },
         "linkedRoleEligibilityScheduleId": {
