--- a/specification/authorization/resource-manager/Microsoft.Authorization/preview/2020-10-01-preview/examples/PutRoleAssignmentScheduleRequest.json
+++ b/specification/authorization/resource-manager/Microsoft.Authorization/preview/2020-10-01-preview/examples/PutRoleAssignmentScheduleRequest.json
@@ -47,6 +47,7 @@
             "ticketNumber": null,
             "ticketSystem": null
           },
+          "validateOnly": "false",
           "justification": null,
           "requestorId": "a3bb8764-cb92-4276-9d2a-ca1e895e55ea",
           "createdOn": "2020-09-09T21:35:27.91Z",
