--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/ApplicationGroups.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/ApplicationGroups.json
@@ -266,7 +266,7 @@
               "type": "string",
               "description": "The Unique identifier for application group.Supports SAS(SasKeyName=KeyName) or AAD(AADAppID=Guid1)"
             },
-            "name": {
+            "appName": {
               "type": "string",
               "description": "The Application Group Name"
             },
