--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupCreate.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupCreate.json
@@ -8,7 +8,7 @@
     "parameters": {
       "properties": {
         "appGroupIdentifier": "SASKey=RootManageSharedKey",
-        "name": "appGroup1",
+        "appName": "appGroup1",
         "policies": [
           {
             "name": "ThrottlingPolicy",
@@ -46,7 +46,7 @@
           "updatedAt": "2022-01-13T03:08:11.1671879Z",
           "createdAt": "2022-01-13T03:08:11.1671879Z",
           "appGroupIdentifier": "SASKey=RootManageSharedKey",
-          "name": "appGroup1",
+          "appName": "appGroup1",
           "policies": [
             {
               "name": "ThrottlingPolicy",
