--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupListByNamespace.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupListByNamespace.json
@@ -18,7 +18,7 @@
               "updatedAt": "2022-01-13T03:08:11.1671879Z",
               "createdAt": "2021-01-13T03:08:11.1671879Z",
               "appGroupIdentifier": "SASKey=RootManageSharedKey",
-              "name": "appGroup1",
+              "appName": "appGroup1",
               "policies": [
                 {
                   "name": "ThrottlingPolicy",
@@ -53,7 +53,7 @@
               "updatedAt": "2022-01-13T04:08:11.1671879Z",
               "createdAt": "2022-01-13T04:08:11.1671879Z",
               "appGroupIdentifier": "AADAppID=Guid2",
-              "name": "appGroup2",
+              "appName": "appGroup2",
               "policies": [
                 {
                   "name": "ThrottlingPolicy",
