--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupGet.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupGet.json
@@ -17,7 +17,7 @@
           "updatedAt": "2022-01-13T03:08:11.1671879Z",
           "createdAt": "2022-01-13T03:08:11.1671879Z",
           "appGroupIdentifier": "SASKey=RootManageSharedKey",
-          "name": "appGroup1",
+          "appName": "appGroup1",
           "policies": [
             {
               "name": "ThrottlingPolicy",
