Fix validations contd.

--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupGet.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupGet.json
@@ -20,22 +20,22 @@
           "appName": "appGroup1",
           "policies": [
             {
-              "name": "ThrottlingPolicy",
+              "policyName": "ThrottlingPolicy1",
               "metricId": "IncomingMessages",
               "rateLimitThreshold": 15
             },
             {
-              "name": "ThrottlingPolicy",
+              "policyName": "ThrottlingPolicy2",
               "metricId": "OutgoingMessages",
               "rateLimitThreshold": 20
             },
             {
-              "name": "ThrottlingPolicy",
+              "policyName": "ThrottlingPolicy3",
               "metricId": "IncomingBytes",
               "rateLimitThreshold": 3951729
             },
             {
-              "name": "ThrottlingPolicy",
+              "policyName": "ThrottlingPolicy4",
               "metricId": "OutgoingBytes",
               "rateLimitThreshold": 245175
             }
