Validations fix continued

--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/ApplicationGroups.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/ApplicationGroups.json
@@ -313,8 +313,7 @@
           "enum": [
             "IncomingBytes",
             "OutgoingBytes",
-            "IncomingMessages",
-            "OutgoingMessages"
+            "IncomingMessages"
           ],
           "x-ms-enum": {
             "name": "MetricId",
