Update enum value

--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2021-10-01-preview/appconfiguration.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2021-10-01-preview/appconfiguration.json
@@ -1325,8 +1325,8 @@
           "type": "string",
           "description": "Indicates whether the configuration store need to be recovered.",
           "enum": [
-            "recover",
-            "default"
+            "Recover",
+            "Default"
           ],
           "x-ms-enum": {
             "name": "CreateMode",
