Updated the ms-examples related to minimal tls settings in both preview and stable folders

--- a/specification/synapse/resource-manager/Microsoft.Synapse/preview/2021-06-01-preview/examples/GetWorkspaceManagedSqlServerDedicatedSQLminimalTlsSettings.json
+++ b/specification/synapse/resource-manager/Microsoft.Synapse/preview/2021-06-01-preview/examples/GetWorkspaceManagedSqlServerDedicatedSQLminimalTlsSettings.json
@@ -13,9 +13,9 @@
         "type": "Microsoft.Synapse/workspaces/dedicatedSQLminimalTlsSettings",
         "location": "East US",
         "properties": {
-          "administratorLogin": "admin",
-          "fullyQualifiedDomainName": "database.windows.net",
-          "state": "succeded",
+          "administratorLogin": "sqladminuser",
+          "fullyQualifiedDomainName": "workspace-2080.database.windows.net",
+          "state": "Ready",
           "minimalTlsVersion": "1.2"
         }
       }
