--- a/specification/synapse/resource-manager/Microsoft.Synapse/stable/2021-06-01/examples/UpdateWorkspaceManagedSqlServerDedicatedSQLminimalTlsSettings.json
+++ b/specification/synapse/resource-manager/Microsoft.Synapse/stable/2021-06-01/examples/UpdateWorkspaceManagedSqlServerDedicatedSQLminimalTlsSettings.json
@@ -13,10 +13,10 @@
         "type": "Microsoft.Synapse/workspaces/dedicatedSQLminimalTlsSettings",
         "location": "East US",
         "properties": {
-          "administratorLogin": "",
-          "fullyQualifiedDomainName": "",
-          "state": "",
-          "minimalTlsVersion": ""
+          "administratorLogin": "sqladminuser",
+          "fullyQualifiedDomainName": "workspace-2080.database.windows.net",
+          "state": "Ready",
+          "minimalTlsVersion": "1.2"
         }
       }
     }
