PR comments addressed

--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/ApplicationGroups.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/ApplicationGroups.json
@@ -260,13 +260,13 @@
             },
             "isEnabled": {
               "type": "boolean",
-              "description": "Determines if the status of connection from client to namespace under this Application Group is enabled or disabled."
+              "description": "Determines if Application Group is allowed to create connection with namespace or not. Once disabled, connections if any for that application group will be immediately broken"
             },
             "appGroupIdentifier": {
               "type": "string",
-              "description": "The Unique identifier for application group.Supports SAS(SasKeyName=KeyName) or AAD(AADAppID=Guid1)"
+              "description": "The Unique identifier for application group.Supports SAS(SASKeyName=KeyName) or AAD(AADAppID=Guid1)"
             },
-            "appName": {
+            "appGroupName": {
               "type": "string",
               "description": "The Application Group Name"
             },
