--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupDelete.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupDelete.json
@@ -1,7 +1,7 @@
 {
   "parameters": {
-    "namespaceName": "sayan-ua-test-eh-system-1",
-    "resourceGroupName": "sayantest",
+    "namespaceName": "contoso-ua-test-eh-system-1",
+    "resourceGroupName": "contosotest",
     "api-version": "2022-01-01",
     "subscriptionId": "e8baea74-64ce-459b-bee3-5aa4c47b3ae3",
     "applicationGroupName": "appGroup1"
