--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupListByNamespace.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/examples/ApplicationGroup/ApplicationGroupListByNamespace.json
@@ -1,7 +1,7 @@
 {
   "parameters": {
-    "namespaceName": "sayan-ua-test-eh-system-1",
-    "resourceGroupName": "sayantest",
+    "namespaceName": "contoso-ua-test-eh-system-1",
+    "resourceGroupName": "contosotest",
     "api-version": "2022-01-01",
     "subscriptionId": "e8baea74-64ce-459b-bee3-5aa4c47b3ae3"
   },
@@ -10,20 +10,20 @@
       "body": {
         "value": [
           {
-            "id": "/subscriptions/e8baea74-64ce-459b-bee3-5aa4c47b3ae3/resourceGroups/sayantest/providers/Microsoft.EventHub/namespaces/sayan-ua-test-eh-system-1/applicationgroups/appGroup1",
+            "id": "/subscriptions/e8baea74-64ce-459b-bee3-5aa4c47b3ae3/resourceGroups/contosotest/providers/Microsoft.EventHub/namespaces/contoso-ua-test-eh-system-1/applicationgroups/appGroup1",
             "name": "appGroup1",
             "type": "Microsoft.EventHub/Namespaces/ApplicationGroups",
             "location": "EAST US 2 EUAP",
             "properties": {
               "updatedAt": "2022-01-13T03:08:11.1671879Z",
               "createdAt": "2021-01-13T03:08:11.1671879Z",
-              "appGroupIdentifier": "SASKey=RootManageSharedKey",
-              "appName": "appGroup1",
+              "appGroupIdentifier": "SASKeyName=RootManageSharedKey",
+              "appGroupName": "appGroup1",
               "policies": [
                 {
                   "policyName": "ThrottlingPolicy1",
                   "metricId": "IncomingMessages",
-                  "rateLimitThreshold": 15
+                  "rateLimitThreshold": 7912
                 },
                 {
                   "policyName": "ThrottlingPolicy3",
@@ -40,7 +40,7 @@
             }
           },
           {
-            "id": "/subscriptions/e8baea74-64ce-459b-bee3-5aa4c47b3ae3/resourceGroups/sayantest/providers/Microsoft.EventHub/namespaces/sayan-ua-test-eh-system-1/applicationgroups/appGroup1",
+            "id": "/subscriptions/e8baea74-64ce-459b-bee3-5aa4c47b3ae3/resourceGroups/contosotest/providers/Microsoft.EventHub/namespaces/contoso-ua-test-eh-system-1/applicationgroups/appGroup1",
             "name": "appGroup2",
             "type": "Microsoft.EventHub/Namespaces/ApplicationGroups",
             "location": "EAST US 2 EUAP",
@@ -48,7 +48,7 @@
               "updatedAt": "2022-01-13T04:08:11.1671879Z",
               "createdAt": "2022-01-13T04:08:11.1671879Z",
               "appGroupIdentifier": "AADAppID=Guid2",
-              "appName": "appGroup2",
+              "appGroupName": "appGroup2",
               "policies": [
                 {
                   "policyName": "ThrottlingPolicy1",
