--- a/specification/cognitiveservices/data-plane/Personalizer/preview/v1.1-preview.3/examples/ServiceConfiguration_Get.json
+++ b/specification/cognitiveservices/data-plane/Personalizer/preview/v1.1-preview.3/examples/ServiceConfiguration_Get.json
@@ -17,7 +17,7 @@
         "logMirrorEnabled": true,
         "logMirrorSasUri": "https://testblob.blob.core.windows.net/container?se=2020-08-13T00%3A00Z\u0026sp=rwl\u0026spr=https\u0026sv=2018-11-09\u0026sr=c\u0026sig=signature",
         "logRetentionDays": 7,
-        "lastConfigurationEditDate": "2020-01-08T01:01:01",
+        "lastConfigurationEditDate": "2019-01-19T00:00:00Z",
         "learningMode": "Online",
         "isAutoOptimizationEnabled": true,
         "autoOptimizationFrequency": "P7D",
